--- a/templates/upload.html
+++ b/templates/upload.html
@@ -97,12 +97,14 @@
 				        <div class="form-group">
 				            <input type="file" name="file" class="file" style = "visibility: hidden; position: absolute;">
 				            <div class="input-group col-xs-4">
-				              <input type="text" class="form-control input" disabled placeholder="Upload File">
-				              <span class="input-group-btn">
+				            	<!--input name = "description" type = "text"-->
+				              <!---input type="text" class="form-control input" disabled placeholder="Upload File"--->
+				              
+				              <!--span class="input-group-btn">
 				                <button class="browse btn btn-default" type="file">
 				                    <i class="glyphicon glyphicon-folder-open"></i>
 				                </button>
-				              </span>
+				              </span-->
 				            </div>
 				        </div>
 				        <br>
